Linter + Code Cleanup